--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.7.0",
     "react-router-dom": "^6.22.0",
+    "react-signature-canvas": "^1.0.6",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
